# ranxin_tinyhttpd

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: CGI_handler.cpp  CGI_handler.hpp  connection_handler.cpp  connection_handler.hpp  main.cpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp  threadPool.hpp
src/htdocs/: check.cgi  color.cgi  index.html
